@@ -33,6 +33,7 @@ Copyright (C) 2001-2008 EQEMu Development Team (http://eqemulator.net)
 #include "masterentity.h"
 #include "../common/features.h"
 #include "QuestParserCollection.h"
+#include "mob.h"
 
 
 TaskManager::TaskManager() {
