@@ -623,6 +623,16 @@ void Client::FinishTrade(Mob* tradingWith, ServerPacket* qspack, bool finalizer)
 			if(UpdateTasksOnDeliver(items, Cash, tradingWith->GetNPCTypeID())) {
 				if(!tradingWith->IsMoving())
 					tradingWith->FaceTarget(this);
+
+				/* Set a timestamp in an entity variable for plugin check_handin.pl in return_items
+				This will stopgap players from items being returned if global_npc.pl has a catch all return_items
+				*/
+				struct timeval read_time;
+				char buffer[50];
+				gettimeofday(&read_time, 0);
+				sprintf(buffer, "%i.%i \n", read_time.tv_sec, read_time.tv_usec);
+				this->SetEntityVariable("Stop_Return", buffer);
+
 			}
 		}
 
